--- a/SimpleMediator/SimpleMediator.csproj
+++ b/SimpleMediator/SimpleMediator.csproj
@@ -4,7 +4,22 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Simple Mediator</Title>
+    <Authors>Karam Khoury</Authors>
+    <Description>SimpleMediator is a lightweight and easy-to-use mediator library designed for .NET applications. It simplifies message-based communication between different parts of your application without direct dependencies.</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/karamkhoury88/SimpleMediator</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackAsTool>True</PackAsTool>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\EventDrivenMicroservices\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
